lavf/segment: add support to segment list file entries sliding window listing

In particular, should fix trac ticket #1842.